# PromptComposer

./: .gitignore  .yarnrc.yml  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
e2e/: run.mjs  wdio.conf.ts
e2e/specs/: compose.spec.ts
fixtures/: minimal_prompt_archive.xlsx
scripts/: set-version.mjs
src/: App.tsrx  api.ts  main.ts  styles.css  types.test.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  archive_schema.rs  catalog.rs  commands.rs  compose.rs  error.rs  fixtures_data.rs  lib.rs  parse.rs  workbook.rs
src-tauri/tests/: archive_lifecycle.rs  e2e_app_flow.rs
