[package]
name = "app"
version = "0.1.8"
description = "Prompt Composer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "gen_fixture"
path = "src/bin/gen_fixture.rs"
required-features = ["gen-fixture"]

[features]
default = []
gen-fixture = []

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
calamine = "0.30.1"
thiserror = "2.0.19"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.2"
tauri-plugin-store = "2.4.4"
rust_xlsxwriter = "0.92.0"
tauri-plugin-wdio-webdriver = "1.2.0"
tempfile = "3.27.0"
tauri-plugin-wdio = "1.2.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[dev-dependencies]
tempfile = "3.27.0"
